--- a/organizExpenses2.css
+++ b/organizExpenses2.css
@@ -217,6 +217,10 @@ body {
     border-bottom: 1px solid rgba(0, 159, 183, 0.26);
 }
 
+.custom-border {
+    border: 1px solid rgba(0, 159, 183, 0.26);
+}
+
 .nav-link .fa {
     margin-right: 0.25rem;
     font-size: 1.875rem;
